--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ return (
 
 var double = makeMultiplier(1);
 
-function myFunction(){
+function myFunction1(){
   document.getElementById("demo").innerHTML = double();
 }
 </script>
