--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ return (
 var double = makeMultiplier(1);
 
 function myFunction1(){
-  document.getElementById("demo").innerHTML = double();
+  document.getElementById("demo1").innerHTML = double();
 }
 </script>
 </body>
